--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "n8n-nodes-kommo",
+  "name": "@marcosvb1/n8n-nodes-kommo",
   "version": "0.1.0",
   "description": "n8n node for Kommo Api",
   "keywords": [
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yatolstoy/n8n-node-kommo.git"
+    "url": "git+https://github.com/marcosvb1/n8n-nodes-kommo.git"
   },
   "engines": {
     "node": ">=18.10",
@@ -34,6 +34,9 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "n8n": {
     "n8nNodesApiVersion": 1,
     "credentials": [
