--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "n8n-nodes-kommo",
-  "version": "0.0.18",
+  "name": "@marcosvb1/n8n-nodes-kommo",
+  "version": "0.0.19",
   "description": "n8n node for Kommo Api",
   "keywords": [
     "n8n-community-node-package",
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yatolstoy/n8n-node-kommo.git"
+    "url": "https://github.com/marcosvb1/n8n-nodes-kommo.git"
   },
   "engines": {
     "node": ">=18.10",
@@ -23,6 +23,9 @@
   },
   "packageManager": "pnpm@9.1.4",
   "main": "index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsc && gulp build:icons",
     "dev": "tsc --watch",
