--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@marcosvb1/n8n-nodes-kommo",
-  "version": "0.3.3-beta.5",
+  "version": "0.3.5",
   "description": "n8n node for Kommo Api",
   "keywords": [
     "n8n-community-node-package",
