fix: Correção menor na descrição do package.json
- Mudança de 'Api' para 'API' na descrição
- Rebuild para forçar atualização das credenciais no n8n

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@marcosvb1/n8n-nodes-kommo",
   "version": "0.3.15",
-  "description": "n8n node for Kommo Api",
+  "description": "n8n node for Kommo API",
   "keywords": [
     "n8n-community-node-package",
     "kommo",
