fix: Add missing async-await-mutex-lock dependency
- Add async-await-mutex-lock to dependencies
- Fix build error that prevented package loading
- Version bump to 0.3.26

Fixes 'The specified package could not be loaded' error.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@marcosvb1/n8n-nodes-kommo",
-  "version": "0.3.25",
+  "version": "0.3.26",
   "description": "n8n node for Kommo API",
   "keywords": [
     "n8n-community-node-package",
@@ -38,6 +38,9 @@
     "nodes": [
       "dist/nodes/Kommo/Kommo.node.js"
     ]
+  },
+  "dependencies": {
+    "async-await-mutex-lock": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
